--- a/index.html
+++ b/index.html
@@ -5,71 +5,168 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Britlex</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet">
+   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
+
    <header>
-      <a href="">Britlex</a>
-      <nav>
-         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Skills</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Pricing</a></li>
-            <li><a href="">Contacts</a></li>
+      <a href="./index.html" class="logo">Brit<span
+            class="logo-lex">lex</span></a>
+      <nav class="nav">
+         <ul class="nav-list list">
+            <li><a href="" class="nav-link link">About Us</a></li>
+            <li><a href="" class="nav-link link">Skills</a></li>
+            <li><a href="" class="nav-link link">Pricing</a></li>
+            <li><a href="" class="nav-link link">Home</a></li>
+            <li><a href="" class="nav-link link">Contacts</a></li>
          </ul>
       </nav>
-
-      <button>Get started</button>
+      <button type="button" class="header-btn btn">Let’s Talk</button>
    </header>
+
    <main>
-      <section>
-         <h1>Learn Any Foreign Language</h1>
-         <p>With our teachers who write a program for each student, you will be
+      <section class="hero">
+         <h1 class="hero-title title">Learn <br>Any Foreign <br>Language</h1>
+         <p class="hero-text text">With our teachers who write a program for each student, you will be
             able to make
             your first sketch after the first lesson.</p>
-         <button type="button">Get started</button>
+         <button type="button" class="hero-btn btn">Get started</button>
          <img src="./img/learning-languages.jpg" width="654" hight="510"
             alt="girl listening audio">
       </section>
-      <section>
-         <h2>Skills</h2>
-         <ul>
-            <li>
-               <img src="./img/shared-goals-bro1.jpg" width="390" hight="390" alt="spaking club">
-               <h3>Speaking</h3>
-               <p>Improve your English skills and confidence. Live classes and interactive lessons
-               online. 20% extra free for a limited time only Learn English online and improve
-               your skills through our high-quality courses and resources – all designed for
-               adult language learners.</p>
-               <a href="">learn more</a>
+
+      <section class="skills">
+         <h2 class="skills-title title">Skills</h2>
+         <ul class="skills-list list">
+            <li class="skills-item">
+               <img src="./img/shared-goals-bro1.jpg" width="390" hight="390"
+                  alt="spaking club">
+               <h3 class="skills-tit title">Speaking</h3>
+               <p class="skills-text text">Improve your English skills and confidence. Live classes and
+                  interactive lessons
+                  online. 20% extra free for a limited time only Learn English
+                  online and improve
+                  your skills through our high-quality courses and resources –
+                  all designed for
+                  adult language learners.</p>
+               <a href="" class="skills-link link">
+                  <button type="button" class="skills-btn btn">learn more</button> 
+               </a>
             </li>
-            <li>
-               <img src="./img/typewriter-bro1.jpg" width="390" hight="264" alt="writing">
-               <h3>Writing</h3>
-               <p>One of the most important and extensive areas of natural science, the science
-               that studies substances, also their composition</p>
-               <a href="">learn more</a>
+            <li class="skills-item">
+               <img src="./img/typewriter-bro1.jpg" width="390" hight="264"
+                  alt="writing">
+               <h3 class="skills-tit title">Writing</h3>
+               <p class="skills-text text">One of the most important and extensive areas of natural
+                  science, the science
+                  that studies substances, also their composition</p>
+               <a href="" class="skills-link link">
+                  <button type="button" class="skills-btn btn">learn more</button> 
+               </a>
             </li>
-            <li>
-               <img src="./img/house bookshelves-bro1.jpg" width="390" hight="264" alt="reading">
-               <h3>Reading</h3>
-               <p>Perception and response actions of the user resulting from the use and/or
-               upcoming use of the product, system or service</p>
-               <a href="">learn more</a>
+            <li class="skills-item">
+               <img src="./img/house bookshelves-bro1.jpg" width="390"
+                  hight="264" alt="reading">
+               <h3 class="skills-tit title">Reading</h3>
+               <p class="skills-text text">Perception and response actions of the user resulting from the
+                  use and/or
+                  upcoming use of the product, system or service</p>
+               <a href="" class="skills-link link">
+                  <button type="button" class="skills-btn btn">learn more</button>
+               </a>
             </li>
-            <li>
-               <img src="./img/podcast-audience-bro1.jpg" width="408" hight="274" alt="podcast">
-               <h3>Listening</h3>
-               <p>Here you can find activities to practise your listening skills. Listening will
-               help you to improve your understanding</p>
-               <a href="">learn more</a>
+            <li class="skills-item">
+               <img src="./img/podcast-audience-bro1.jpg" width="408"
+                  hight="274" alt="podcast">
+               <h3 class="skills-tit title">Listening</h3>
+               <p class="skills-text text">Here you can find activities to practise your listening
+                  skills. Listening will
+                  help you to improve your understanding</p>
+               <a href="" class="skills-link link">
+                  <button type="button" class="skills-btn btn">learn more</button> 
+               </a>
             </li>
          </ul>
       </section>
+
+      <section class="about">
+         <h2 class="about-title title">About Us</h2>
+         <p class="about-text text">The model offers a framework for discussing problems related to the
+            user's
+            experience, as well as possible ways and means of solving them.
+            Application
+            development begins at the top level (strategy), where the future
+            software
+            product is described quite abstractly from the point of view of the
+            expectations
+            of both users and the customer.</p>
+         <ul class="about-list list">
+            <li class="about-item">800 <span class="item">Pupils</span></li>
+            <li class="about-item">18 <span class="item">Teachers</span></li>
+            <li class="about-item">6 <span class="item">Foreign languages</span></li>
+         </ul>
+         <img src="./img/business-competition-bro1.jpg"
+            alt="people climb the mountain" width="540" height="540">
+      </section>
+
+      <section class="pricing">
+         <h2 class="pricing-title title">Pricing</h2>
+         <ul class="pricing-list list">
+            <li>
+               <img src="./img/online.jpg" alt="girl at the computer "
+                  width="426" height="320">
+               <h3 class="pricing-tit title">Self-study online course</h3>
+               <p class="pricing-text text">Start learning English online in live classes with qualified
+                  EC teachers and students from all over the world.</p>
+               <p class="pricing-price">£5.99<span class="period">per month</span></p>
+            </li>
+            <li>
+               <img src="./img/lesson.jpg" alt="men in class" " width=" 426"
+                  height="320">
+               <h3 class="pricing-tit title">Live online classes</h3>
+               <p class="pricing-text text">Interactive group classes with expert
+                  teachers. Free 7-day trial</p>
+               <p class="pricing-price"> £12.99 <span class="period">per month</span></p>
+            </li>
+            <li>
+               <img src="./img/webinar.jpg"
+                  alt="girl watching video lesson" " width=" 426" height="320">
+               <h3 class="pricing-tit title">Personal Tuition</h3>
+               <p class="pricing-text text">Online one-to-one English tutoring – enjoy
+                  our first session for only $1</p>
+               <p class="pricing-price"> £12.99 <span class="period">per month</span></p>
+            </li>
+         </ul>
+      </section>
+      <section>
+         <img src="./img/contact.jpg" alt="boy with paper airplane" width="425"
+            height="430">
+         <h2 class="contact-title title">Contact Us</h2>
+         <p class="contact-text text">Discover your current English level by taking our free online
+            English test. Sign up to our newsletter for learning tips and free
+            resources</p>
+         <button type="button" class="contact-mail btn">Enter Your E-mail</button>
+         <button type="button" class="contact-sub btn">Subscribe</button>
+      </section>
+
    </main>
 
+   <footer>
+      <a href="./index.html" class="logo">Brit<span
+         class="logo-lex">lex</span></a>
+      <ul class="footer-list list">
+         <li><a href="" class="footer-link">Terms and Conditions</a></li>
+         <li><a href="" class="footer-link">Privacy Policy</a></li>
+         <li><a href="" class="footer-link">Cookie Policy</a></li>
+      </ul>
+   </footer>
 
 </body>
 
